2004-09-09  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (Image Syntax): mention @noindent, @center.

2004-09-06  Stepan Kasal  <kasal@ucw.cz>

	* doc/texinfo.tex (\Efloat): Take care to run \scantokens on
	  \thisshortcaption before writing the lof line to auxfile.
	  Otherwise, when a newline appears in the argument to
	  @shortcaption, a literal ^^M is written to the aux file.
	  Report from Patrice, 1 Aug 2004 15:54:44 +0200.

2004-09-01  Karl Berry  <karl@gnu.org>

	* util/gendocs.sh: show commands, allow / in description.

2004-08-30  Karl Berry  <karl@gnu.org>

	* makeinfo/makeinfo.c (maybe_escaped_expansion): new routine, like
		expansion but does HTML escapes.
	* makeinfo/makeinfo.h (maybe_escaped_expansion): declare.
	* makeinfo/index.c (cm_printindex): call it.
	This is @cindex Kahrs, J@"urgen does not get
	gawk.texi:23425: Unknown command `&quot;urgen'.
	(in gawk 3.1.4).
	Report from: Stepan Kasal <kasal@ucw.cz>, 24 Aug 2004 12:36:34 +0200.

2004-08-29  Karl Berry  <karl@gnu.org>

	* makeinfo/node.c (split_file): do not search for output file
		along the path when calling find_and_load (can cause seg
		fault when cross-compiling).
	From: Martin Husemann <martin@duskware.de>, 29 Aug 2004 08:40:33 +0200.
	http://www.netbsd.org/cgi-bin/query-pr-single.pl?number=26791

2004-08-27  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (Macro details): more warnings about macro usage.
	Report from: Stepan Kasal <kasal@ucw.cz>, 24 Aug 2004 09:29:35 +0200.

	* doc/texinfo.tex (\Efloat): \vskip\parskip after printing the
	caption; previous \printedsomething code to do this had become
	obsolete.  Reported by Stepan.

	* doc/texinfo.txi (caption shortcaption): show an example for
        @shortcaption, and remark that weird commands like @c and @verb
	are not allowed.  Suggested by Stepan.

2004-08-27  Stepan Kasal  <kasal@ucw.cz>

	* doc/texinfo.tex (\initial): when breaking the column before the
	  initial, allow for some space at the bottom of the column, so